enhance safety with List.of() method.